Bug 56617 - treelist: attempt to dereference a past-the-end iterator
Summary: treelist: attempt to dereference a past-the-end iterator
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: framework (show other bugs)
Version:
(earliest affected)
4.0.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Kohei Yoshida
URL:
Whiteboard: target:3.7.0
Keywords:
Depends on:
Blocks: mab4.0
  Show dependency treegraph
 
Reported: 2012-10-31 15:24 UTC by Caolán McNamara
Modified: 2012-10-31 20:06 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Caolán McNamara 2012-10-31 15:24:02 UTC
crash on:
tools->macros->organize macros->beanshell->close
with --enable-dbgutil
Comment 1 Kohei Yoshida 2012-10-31 15:27:20 UTC
Ok.
Comment 2 Kohei Yoshida 2012-10-31 19:03:30 UTC
BTW, even with a non-dbgutil build this crashes.

It's probably the root case as the one Miklos reported on IRC i.e.

Tools -> Macros -> Organize Macros -> LibreOffice Basic -> Edit, Alt-F4 to close.
Comment 3 Kohei Yoshida 2012-10-31 19:51:27 UTC
Adding Miklos.  This is basically the same crasher he reported on IRC.
Comment 4 Kohei Yoshida 2012-10-31 19:52:12 UTC
So, I've been able at least to figure out how to prevent the crash, though I didn't look close enough to see why it was previously causing crash.
Comment 5 Kohei Yoshida 2012-10-31 20:03:37 UTC
Fixed.
Comment 6 Not Assigned 2012-10-31 20:06:12 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ddd44eb48fa03ea36fe32a3f7c9023828c1e449c

fdo#56617: Fix crash on closing beanshell dialog and the macro window.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.